tests/baselines/reference/parserParameterList12.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList12.ts (1 errors) ====
    function F(a,) {
                ~
!!! error TS1009: Trailing comma not allowed.
    }